# demo

./: .index.scss.swp  .jax.html.swp  .markdown.css.swp  .package-lock.json.swp  Cargo.toml  README.md  build.sh  d1.js  index.html  jax.html  jax1.html  showdown.js  tormd.py
doc/: index.css
docs/: .index  index-144f429b089ecd60.js  index-144f429b089ecd60_bg.wasm  index-22f5f183d15c6144.js  index-2fd70729c65298be.js  index-2fd70729c65298be_bg.wasm  index-3089271354d6e3f.js  index-3ce97d1674ffa2dc.js  index-3ce97d1674ffa2dc_bg.wasm  index-462696a7b281260f.js  index-462696a7b281260f_bg.wasm  index-4dcf36c74d8e695.js  index-4dcf36c74d8e695_bg.wasm  index-50ee9a731526fd62.js  index-50ee9a731526fd62_bg.wasm  index-77e9d33c240089f9.js  index-985a299174ca2e02.js  index-985a299174ca2e02_bg.wasm  index-98e175ebde765ece.js  index-98e175ebde765ece_bg.wasm  index-ab5d75c0a359f380.js  index-e31f3c746c40fd0.js  index-e31f3c746c40fd0_bg.wasm  index-e5971e1688a66c9d.js  index-e5971e1688a66c9d_bg.wasm  index-fe68288b7d6090d8.js  index-fe68288b7d6090d8_bg.wasm  index.html
posts/: 2017-07-23-Problem-related-to-calculus-and-conjectures.rmd  2017-07-23-Problem-related-to-complex-analysis-and-hypergeometric-functi.rmd  2017-07-24-Problem-related-to-calculus-and-experimental-mathematics.rmd  2017-07-25-Problem-related-to-calculus-and-conjectures.rmd  2017-07-26-Problem-related-to-calculus-and-conjectures.rmd  2017-07-26-Problem-related-to-integration-and-error-functi.rmd  2017-07-28-How-can-you-prove-that-a-function-has-no-closed-form-integral.rmd  2017-08-02-Induction-on-Real-Numbers.rmd  (+261 more)
(+36 files in other folders)
