[package]
name = "router"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }
lipsum = "0.8"
log = "0.4"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["small_rng"] }
wasm-logger = "0.2"
yew = { git = "https://github.com/yewstack/yew/" }
yew-router = { git = "https://github.com/yewstack/yew.git" }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
gloo-timers = "0.2"
regex = "1.5.4"
pulldown-cmark = "0.9.1"
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
js-sys = "0.3.56"
gloo-file = "0.2.0"
web-sys = { version = "0.3.56", features = ["Window", "FileReaderSync", "Response", "Request", "Document", "DomParser", "SupportedType", "HtmlCollection", "Node", "NodeList"] }

